# whisper-api

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  main.py  pyproject.toml
backend/: .gitignore  config.py
backend/api/: transcribe.py
backend/api/v1/: transcription.py
backend/core/: config.py
backend/services/: email.py  s3.py  storage.py  transcribe.py  transcription.py  workflow.py
frontend/: .dockerignore  index.html  package-lock.json  package.json
frontend/src/: App.vue
frontend/src/assets/: base.css  main.css
frontend/src/components/: DropZone.vue  HeaderZone.vue  SubmitZone.vue  TopBar.vue
records/: .gitignore
