[project]
name = "whisper-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.43.19",
    "dotenv>=0.9.9",
    "fastapi>=0.135.3",
    "faster-whisper>=1.1.0",
    "loguru>=0.7.3",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.26",
    "resend>=2.29.0",
    "uvicorn>=0.44.0",
]
